# ai-pr-review

./: .dockerignore  .gitignore  .trufflehog.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sarif-smoke-test  README.md  SECURITY.md  action.yml  llm-call.sh  model-pricing.json  post-review-bitbucket.sh  post-review-gitlab.sh  post-review.sh  pyproject.toml  review.sh  run-checkov.sh  run-cve-check.sh  run-eslint.sh  run-golangci-lint.sh  run-hadolint.sh  run-kube-linter.sh  run-phpcs.sh  run-phpstan.sh  run-ruff.sh  run-semgrep.sh  run-shellcheck.sh  run-tflint.sh  run-trufflehog.sh  suppressions.json  test-buggy-script.sh
.ai-pr-review/: learnings.jsonl
.serena/: project.yml
THIRD-PARTY-LICENSES/: NOTICE.md
ai_pr_review/: __init__.py  __main__.py  cli.py  config.py  errors.py  language_profile_sections.py  language_profiles.py  languages.py  logging.py  manifest.py  orchestrate.py  pricing.py  sarif_smoke_test.py  telemetry.py
analyzers/: run-checkov.sh  run-cve-check.sh  run-eslint.sh  run-golangci-lint.sh  run-hadolint.sh  run-kube-linter.sh  run-phpcs.sh  run-phpstan.sh  run-ruff.sh  run-semgrep.sh  run-shellcheck.sh  run-tflint.sh  run-trufflehog.sh
config/: model-pricing.json  suppressions.json
container-action/: action.yml
docs/: ARCHITECTURE.md  _config.yml  agents.md  analyzers-bash-inventory.md  architecture-internals.md  architecture.md  bitbucket-setup.md  compute-output-schema.md  configuration.md  features.md  getting-started.md  gitlab-setup.md  index.md  installation-direct-action.md  installation-submodule.md  (+5 more)
(+518 files in other folders)
