[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-review"
version = "2.4.6"
description = "AI-powered PR review engine"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "anyio>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
context = [
    "tree-sitter-language-pack>=0.7.0",
]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "respx>=0.21",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
ai-pr-review = "ai_pr_review.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_pr_review*"]

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/golden"]
python_files = ["test_*.py"]
norecursedirs = ["tests/security/canary-workspace"]
markers = [
    "security: security invariant regression tests — failures are security issues, not flaky tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
